# near-rust-nft

./: .gitignore  README.md  init-args.json  init-args.txt  init-contract.js  reset-deploy.js  rust-toolchain.toml
nft-contract/: Cargo.toml  README.md  build.ps1  build.sh  deploy.ps1  deploy.sh  example-usage.md  init-args.json  init.js  package.json  reset-deploy.js
nft-contract/res/: nft_contract.wasm
nft-contract/src/: lib.rs  simple_lib.rs
nft-frontend/: README.md  craco.config.js  package-lock.json  package.json
nft-frontend/public/: index.html
nft-frontend/src/: App.css  App.js  index.js  near-config.js  near-context.js
nft-frontend/src/components/: Navbar.js
src/: near-context.js
